--- a/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
+++ b/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
@@ -3,17 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/robertopsouto/gpubootcamp/blob/colab/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FRRS3WmyuhYd"
+        "id": "ORbquOLmvJkF"
       },
       "source": [
         "# Getting Started with OpenACC"
@@ -22,7 +12,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kYsRbmwhuhYf"
+        "id": "Cd3gRHRyvJkH"
       },
       "source": [
         "In this lab you will learn the basics of using OpenACC to parallelize a simple application to run on multicore CPUs and GPUs. This lab is intended for Fortran programmers. If you prefer to use C/C++, click [this link.](../../C/jupyter_notebook/openacc_c_lab1.ipynb)"
@@ -39,7 +29,7 @@
         "! sudo apt-get install -y nvhpc-23-3"
       ],
       "metadata": {
-        "id": "Vrw1D5TYu1d-"
+        "id": "iv_6sBm1vZ6u"
       },
       "execution_count": null,
       "outputs": []
@@ -51,7 +41,7 @@
         "apt install environment-modules"
       ],
       "metadata": {
-        "id": "K3EW06Myusjg"
+        "id": "F0CRfGnjvgyO"
       },
       "execution_count": null,
       "outputs": []
@@ -59,7 +49,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "D8nO5a6uuhYf"
+        "id": "hcphTrlvvJkH"
       },
       "source": [
         "---\n",
@@ -70,7 +60,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "aZH_NYmLuhYg"
+        "id": "BH4WaO-5vJkI"
       },
       "outputs": [],
       "source": [
@@ -80,7 +70,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xEG9eXZ4uhYh"
+        "id": "8dDXsd4rvJkJ"
       },
       "source": [
         "The output of the above command will vary according to which GPUs you have in your system. For example, if you are running the lab on a machine with NVIDIA Tesla V100 GPUs, you might would see the following:\n",
@@ -131,7 +121,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5iCRxAjLuhYh"
+        "id": "Qpo80oG8vJkK"
       },
       "source": [
         "---\n",
@@ -153,7 +143,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yZKPlrGXuhYi"
+        "id": "m1CV6_WfvJkK"
       },
       "source": [
         "---\n",
@@ -169,7 +159,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "W3PUeoqOuhYi"
+        "id": "TaQYBiNTvJkK"
       },
       "source": [
         "### Code Description\n",
@@ -211,7 +201,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kgHg1SGfuhYj"
+        "id": "dZWnA7bUvJkL"
       },
       "source": [
         "### Code Breakdown\n",
@@ -272,7 +262,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_wliKZjBuhYj"
+        "id": "NsxgZOrhvJkM"
       },
       "source": [
         "---\n",
@@ -285,7 +275,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "P8wksww6uhYk"
+        "id": "LrTfN4hbvJkM"
       },
       "source": [
         "### Compiling the Code with NVIDIA  HPC\n",
@@ -302,7 +292,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ZnIPJ9pNuhYk"
+        "id": "FdNkRZixvJkM"
       },
       "outputs": [],
       "source": [
@@ -312,7 +302,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fsySEuyYuhYk"
+        "id": "ZRtkYscYvJkN"
       },
       "source": [
         "### Expected Output\n",
@@ -341,7 +331,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DfalphpBuhYl"
+        "id": "6VbjV2XavJkN"
       },
       "source": [
         "## Parallelizing Loops with OpenACC\n",
@@ -352,7 +342,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MPaQTFWvuhYl"
+        "id": "__MVJS_mvJkN"
       },
       "source": [
         "---\n",
@@ -375,7 +365,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eSglhyxauhYl"
+        "id": "sa4Yd5FtvJkN"
       },
       "source": [
         "---\n",
@@ -425,7 +415,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ibwBezIAuhYl"
+        "id": "gpKzJWwmvJkO"
       },
       "source": [
         "### Parallelize the Example Code\n",
@@ -446,7 +436,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "WywP9KaguhYm"
+        "id": "TkKE90xVvJkO"
       },
       "outputs": [],
       "source": [
@@ -456,7 +446,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HoQm06cDuhYm"
+        "id": "d_99JIR9vJkO"
       },
       "source": [
         "Here's the ouput you should see after running the above cell. Your total runtime may be slightly different, but it should be close. If you find yourself stuck on this part, you can take a look at [our solution](../source_code/lab1/solutions/laplace2d.parallel.f90). \n",
@@ -500,7 +490,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8NBY-cH2uhYm"
+        "id": "cLIVAniivJkO"
       },
       "outputs": [],
       "source": [
@@ -510,7 +500,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "j8u1PI3xuhYm"
+        "id": "EhNl9JGHvJkP"
       },
       "source": [
         "Wow! That ran a lot faster! This demonstrates the power of using OpenACC to accelerate an application. I made very minimal code changes and could run my code on multicore CPUs and GPUs by only changing my compiler option. Very cool!\n",
@@ -553,7 +543,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KdVEhShRuhYn"
+        "id": "Pws-QRdOvJkP"
       },
       "source": [
         "## Conclusion\n",
@@ -564,7 +554,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hyPiBU3CuhYn"
+        "id": "31slB5D1vJkP"
       },
       "source": [
         "## Bonus Task\n",
@@ -575,7 +565,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "a3D1zKOSuhYn"
+        "id": "hrztWtkCvJkP"
       },
       "source": [
         "---\n",
@@ -591,7 +581,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Px4nU-IeuhYn"
+        "id": "Ezn3goHuvJkP"
       },
       "outputs": [],
       "source": [
@@ -604,7 +594,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZNeY1yNDuhYn"
+        "id": "_Q0KuVNpvJkQ"
       },
       "source": [
         "**After** executing the above zip command, you should be able to download and save the zip file by holding down <mark>Shift</mark> and <mark>Right-Clicking</mark> [Here](../openacc_files.zip)\n",
@@ -636,8 +626,7 @@
       "version": "3.6.9"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "accelerator": "GPU",
     "gpuClass": "standard"
