--- a/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
+++ b/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/robertopsouto/gpubootcamp/blob/colab/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ORbquOLmvJkF"
       },
       "source": [
@@ -29,10 +39,80 @@
         "! sudo apt-get install -y nvhpc-23-3"
       ],
       "metadata": {
-        "id": "iv_6sBm1vZ6u"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iv_6sBm1vZ6u",
+        "outputId": "932d33d1-1a7b-430c-e4a8-7b7802ed49ca"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100  1626  100  1626    0     0  31269      0 --:--:-- --:--:-- --:--:-- 31269\n",
+            "deb [signed-by=/usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg] https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64 /\n",
+            "Hit:1 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal InRelease\n",
+            "Get:2 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
+            "Get:3 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
+            "Hit:4 http://ppa.launchpad.net/cran/libgit2/ubuntu focal InRelease\n",
+            "Hit:5 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal InRelease\n",
+            "Get:6 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  InRelease [1,581 B]\n",
+            "Hit:7 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal InRelease\n",
+            "Get:8 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  InRelease [2,126 B]\n",
+            "Hit:9 http://ppa.launchpad.net/ubuntugis/ppa/ubuntu focal InRelease\n",
+            "Hit:10 http://archive.ubuntu.com/ubuntu focal InRelease\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]\n",
+            "Get:12 http://security.ubuntu.com/ubuntu focal-security/restricted amd64 Packages [2,139 kB]\n",
+            "Get:13 http://security.ubuntu.com/ubuntu focal-security/main amd64 Packages [2,629 kB]\n",
+            "Get:14 http://security.ubuntu.com/ubuntu focal-security/multiverse amd64 Packages [28.5 kB]\n",
+            "Get:15 http://security.ubuntu.com/ubuntu focal-security/universe amd64 Packages [1,033 kB]\n",
+            "Get:16 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]\n",
+            "Get:17 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  Packages [993 kB]\n",
+            "Get:18 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  Packages [10.5 kB]\n",
+            "Get:19 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [1,329 kB]\n",
+            "Get:20 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [3,111 kB]\n",
+            "Get:21 http://archive.ubuntu.com/ubuntu focal-updates/multiverse amd64 Packages [31.2 kB]\n",
+            "Get:22 http://archive.ubuntu.com/ubuntu focal-updates/restricted amd64 Packages [2,277 kB]\n",
+            "Fetched 13.9 MB in 3s (5,316 kB/s)\n",
+            "Reading package lists... Done\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following additional packages will be installed:\n",
+            "  nvhpc-2023\n",
+            "The following NEW packages will be installed:\n",
+            "  nvhpc-2023 nvhpc-23-3\n",
+            "0 upgraded, 2 newly installed, 0 to remove and 30 not upgraded.\n",
+            "Need to get 3,053 MB of archives.\n",
+            "After this operation, 11.7 GB of additional disk space will be used.\n",
+            "Get:1 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  nvhpc-23-3 23.3 [3,053 MB]\n",
+            "Get:2 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  nvhpc-2023 23.3 [1,214 B]\n",
+            "Fetched 3,053 MB in 28s (108 MB/s)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 2.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package nvhpc-23-3.\n",
+            "(Reading database ... 122352 files and directories currently installed.)\n",
+            "Preparing to unpack .../nvhpc-23-3_23.3_amd64.deb ...\n",
+            "Unpacking nvhpc-23-3 (23.3) ...\n",
+            "Selecting previously unselected package nvhpc-2023.\n",
+            "Preparing to unpack .../nvhpc-2023_23.3_amd64.deb ...\n",
+            "Unpacking nvhpc-2023 (23.3) ...\n",
+            "Setting up nvhpc-2023 (23.3) ...\n",
+            "Setting up nvhpc-23-3 (23.3) ...\n",
+            "CPU times: user 1.88 s, sys: 239 ms, total: 2.12 s\n",
+            "Wall time: 5min 15s\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -41,10 +121,46 @@
         "apt install environment-modules"
       ],
       "metadata": {
-        "id": "F0CRfGnjvgyO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F0CRfGnjvgyO",
+        "outputId": "4c284d2e-1956-481c-a612-d1fa6d655398"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists...\n",
+            "Building dependency tree...\n",
+            "Reading state information...\n",
+            "The following NEW packages will be installed:\n",
+            "  environment-modules\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 30 not upgraded.\n",
+            "Need to get 281 kB of archives.\n",
+            "After this operation, 826 kB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu focal/universe amd64 environment-modules amd64 4.4.1-1 [281 kB]\n",
+            "Fetched 281 kB in 1s (496 kB/s)\n",
+            "Selecting previously unselected package environment-modules.\r\n",
+            "(Reading database ... \r(Reading database ... 5%\r(Reading database ... 10%\r(Reading database ... 15%\r(Reading database ... 20%\r(Reading database ... 25%\r(Reading database ... 30%\r(Reading database ... 35%\r(Reading database ... 40%\r(Reading database ... 45%\r(Reading database ... 50%\r(Reading database ... 55%\r(Reading database ... 60%\r(Reading database ... 65%\r(Reading database ... 70%\r(Reading database ... 75%\r(Reading database ... 80%\r(Reading database ... 85%\r(Reading database ... 90%\r(Reading database ... 95%\r(Reading database ... 100%\r(Reading database ... 137529 files and directories currently installed.)\r\n",
+            "Preparing to unpack .../environment-modules_4.4.1-1_amd64.deb ...\r\n",
+            "Unpacking environment-modules (4.4.1-1) ...\r\n",
+            "Setting up environment-modules (4.4.1-1) ...\r\n",
+            "Processing triggers for man-db (2.9.1-1) ...\r\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n",
+            "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -58,13 +174,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "BH4WaO-5vJkI"
-      },
-      "outputs": [],
       "source": [
-        "!nvaccelinfo"
+        "%%bash\n",
+        "source /usr/share/modules/init/bash\n",
+        "module use /opt/nvidia/hpc_sdk/modulefiles\n",
+        "module load nvhpc/23.3\n",
+        "nvaccelinfo"
+      ],
+      "metadata": {
+        "id": "1Z_6ReluxYdo",
+        "outputId": "f9d43b7b-6738-45fe-aea9-bea87ef0d6e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "CUDA Driver Version:           12000\n",
+            "NVRM version:                  NVIDIA UNIX x86_64 Kernel Module  525.85.12  Sat Jan 28 02:10:06 UTC 2023\n",
+            "\n",
+            "Device Number:                 0\n",
+            "Device Name:                   Tesla T4\n",
+            "Device Revision Number:        7.5\n",
+            "Global Memory Size:            15835398144\n",
+            "Number of Multiprocessors:     40\n",
+            "Concurrent Copy and Execution: Yes\n",
+            "Total Constant Memory:         65536\n",
+            "Total Shared Memory per Block: 49152\n",
+            "Registers per Block:           65536\n",
+            "Warp Size:                     32\n",
+            "Maximum Threads per Block:     1024\n",
+            "Maximum Block Dimensions:      1024, 1024, 64\n",
+            "Maximum Grid Dimensions:       2147483647 x 65535 x 65535\n",
+            "Maximum Memory Pitch:          2147483647B\n",
+            "Texture Alignment:             512B\n",
+            "Clock Rate:                    1590 MHz\n",
+            "Execution Timeout:             No\n",
+            "Integrated Device:             No\n",
+            "Can Map Host Memory:           Yes\n",
+            "Compute Mode:                  default\n",
+            "Concurrent Kernels:            Yes\n",
+            "ECC Enabled:                   Yes\n",
+            "Memory Clock Rate:             5001 MHz\n",
+            "Memory Bus Width:              256 bits\n",
+            "L2 Cache Size:                 4194304 bytes\n",
+            "Max Threads Per SMP:           1024\n",
+            "Async Engines:                 3\n",
+            "Unified Addressing:            Yes\n",
+            "Managed Memory:                Yes\n",
+            "Concurrent Managed Memory:     Yes\n",
+            "Preemption Supported:          Yes\n",
+            "Cooperative Launch:            Yes\n",
+            "Default Target:                cc75\n"
+          ]
+        }
       ]
     },
     {
@@ -290,13 +458,85 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "FdNkRZixvJkM"
-      },
-      "outputs": [],
       "source": [
-        "!cd ../source_code/lab1 && make clean && make laplace_serial && echo \"Compilation Successful!\" && ./laplace"
+        "%%bash\n",
+        "git --version\n",
+        "git clone --depth 1 --branch colab --no-checkout https://github.com/robertopsouto/gpubootcamp.git \n",
+        "cd gpubootcamp\n",
+        "git sparse-checkout set hpc/openacc/English"
+      ],
+      "metadata": {
+        "id": "ePiahUwXzKi_",
+        "outputId": "c2db53de-fa76-4d11-b065-efb7923407b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "git version 2.25.1\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Cloning into 'gpubootcamp'...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FdNkRZixvJkM",
+        "outputId": "f6e2fbdd-4d12-44db-fa71-9441efe13b0d"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rm -f *.o laplace\n",
+            "nvfortran -fast -o laplace laplace2d.f90 jacobi.f90\n",
+            "Compilation Successful!\n",
+            "Jacobi relaxation Calculation: 4096 x 4096 mesh\n",
+            "    0  0.250000\n",
+            "  100  0.002397\n",
+            "  200  0.001204\n",
+            "  300  0.000804\n",
+            "  400  0.000603\n",
+            "  500  0.000483\n",
+            "  600  0.000403\n",
+            "  700  0.000345\n",
+            "  800  0.000302\n",
+            "  900  0.000269\n",
+            " completed in     50.157 seconds\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "laplace2d.f90:\n",
+            "jacobi.f90:\n"
+          ]
+        }
+      ],
+      "source": [
+        "%%bash\n",
+        "source /usr/share/modules/init/bash\n",
+        "module use /opt/nvidia/hpc_sdk/modulefiles\n",
+        "module load nvhpc/23.3\n",
+        "cd gpubootcamp/hpc/openacc/English/Fortran/source_code/lab1 && make clean && make laplace_serial && echo \"Compilation Successful!\" && ./laplace"
       ]
     },
     {
@@ -434,13 +674,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
-        "id": "TkKE90xVvJkO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TkKE90xVvJkO",
+        "outputId": "d233d3ae-eff4-48af-98b9-057452092224"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rm -f *.o laplace\n",
+            "nvfortran -fast -ta=multicore -Minfo=accel -o laplace laplace2d.f90 jacobi.f90 \n",
+            "Compilation Successful!\n",
+            "Jacobi relaxation Calculation: 4096 x 4096 mesh\n",
+            "    0  0.250000\n",
+            "  100  0.002397\n",
+            "  200  0.001204\n",
+            "  300  0.000804\n",
+            "  400  0.000603\n",
+            "  500  0.000483\n",
+            "  600  0.000403\n",
+            "  700  0.000345\n",
+            "  800  0.000302\n",
+            "  900  0.000269\n",
+            " completed in     50.435 seconds\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "laplace2d.f90:\n",
+            "jacobi.f90:\n"
+          ]
+        }
+      ],
       "source": [
-        "!cd ../source_code/lab1 && make clean && make laplace_multicore && echo \"Compilation Successful!\" && ./laplace"
+        "%%bash\n",
+        "source /usr/share/modules/init/bash\n",
+        "module use /opt/nvidia/hpc_sdk/modulefiles\n",
+        "module load nvhpc/23.3\n",
+        "cd gpubootcamp/hpc/openacc/English/Fortran/source_code/lab1 && make clean && make laplace_multicore && echo \"Compilation Successful!\" && ./laplace"
       ]
     },
     {
@@ -488,13 +766,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "cLIVAniivJkO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cLIVAniivJkO",
+        "outputId": "dc51479a-16d5-4687-9cd2-6d5298e85b4c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rm -f *.o laplace\n",
+            "nvfortran -fast -ta=tesla:managed -Minfo=accel -o laplace laplace2d.f90 jacobi.f90 \n",
+            "Compilation Successful!\n",
+            "Jacobi relaxation Calculation: 4096 x 4096 mesh\n",
+            "    0  0.250000\n",
+            "  100  0.002397\n",
+            "  200  0.001204\n",
+            "  300  0.000804\n",
+            "  400  0.000603\n",
+            "  500  0.000483\n",
+            "  600  0.000403\n",
+            "  700  0.000345\n",
+            "  800  0.000302\n",
+            "  900  0.000269\n",
+            " completed in     51.310 seconds\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "laplace2d.f90:\n",
+            "jacobi.f90:\n"
+          ]
+        }
+      ],
       "source": [
-        "!cd ../source_code/lab1 && make clean && make laplace_gpu && echo \"Compilation Successful!\" && ./laplace"
+        "%%bash\n",
+        "source /usr/share/modules/init/bash\n",
+        "module use /opt/nvidia/hpc_sdk/modulefiles\n",
+        "module load nvhpc/23.3\n",
+        "cd gpubootcamp/hpc/openacc/English/Fortran/source_code/lab1 && make clean && make laplace_gpu && echo \"Compilation Successful!\" && ./laplace"
       ]
     },
     {
@@ -626,7 +942,8 @@
       "version": "3.6.9"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "accelerator": "GPU",
     "gpuClass": "standard"
