--- a/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
+++ b/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
@@ -45,7 +45,7 @@
         "id": "iv_6sBm1vZ6u",
         "outputId": "932d33d1-1a7b-430c-e4a8-7b7802ed49ca"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "id": "F0CRfGnjvgyO",
         "outputId": "4c284d2e-1956-481c-a612-d1fa6d655398"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +472,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -674,7 +674,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -718,7 +718,12 @@
         "source /usr/share/modules/init/bash\n",
         "module use /opt/nvidia/hpc_sdk/modulefiles\n",
         "module load nvhpc/23.3\n",
-        "cd gpubootcamp/hpc/openacc/English/Fortran/source_code/lab1 && make clean && make laplace_multicore && echo \"Compilation Successful!\" && ./laplace"
+        "cd gpubootcamp/hpc/openacc/English/Fortran/source_code/lab1/solutions\n",
+        "make clean\n",
+        "cp laplace2d.parallel.f90 laplace2d.f90\n",
+        "make laplace_multicore\n",
+        "echo \"Compilation Successful!\"\n",
+        "./laplace"
       ]
     },
     {
@@ -766,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
